k8s/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: cloud
  labels:
    app: cloud
  annotations:
    # force policy will ensure that deployment is updated
    # even when tag is unchanged (latest remains)
    keel.sh/policy: force
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cloud
  template:
    metadata:
      labels:
        app: cloud
    spec:
      containers:
        - name: cloud
          image: registry.digitalocean.com/teamyapp/cloud:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: cloud
spec:
  selector:
    app: cloud
  ports:
    - name: http
      port: 80
    - name: grpc
      port: 81
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: production
  name: cloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloud.teamyapp.com`)
      services:
        - kind: Service
          namespace: production
          name: cloud
          port: 80
          passHostHeader: true
    - kind: Rule
      match: Host(`rpc-cloud.teamyapp.com`)
      services:
        - kind: Service
          namespace: production
          name: cloud
          port: 81
          scheme: h2c
  tls:
    secretName: teamy-cert
